<resources>
    <string name="app_name">Ogrnot Application</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_student_number">Öğrenci No</string>
    <string name="label_password">Şifre</string>
    <string name="label_sign_in">Giriş</string>
    <string name="logo_content_description">Logo</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="toolbar_right_icon">Icon to the right</string>
    <string name="authenticate">Giriş yapılıyor</string>
    <string name="authentication_failed">Giriş yapılmadı</string>
    <string name="no_internet_connection">İnternet bağlantısı yok</string>
    <string name="wrong_credentials">Yanlış numara veya şifre</string>
    <string name="authentication_auth_key_not_found">Lütfen tekrar deneyiniz</string>
    <string name="lesson_code_tr">Ders Kodu:</string>
    <string name="lesson_name_tr">Ders Adı</string>
    <string name="lesson_credit_tr">Ders Kredisi:</string>
    <string name="student_number_tr">Numara:</string>
    <string name="faculty_tr">Fakülte Adı:</string>
    <string name="department_tr">Bölüm Adı:</string>
    <string name="student_name_tr">Adı:</string>
    <string name="student_surname_tr">Soyadı:</string>
    <string name="student_birth_place_tr">Doğum Yeri:</string>
    <string name="student_birthday_tr">Doğum Tarihi:</string>
    <string name="student_fathers_name_tr">Baba Adı:</string>
    <string name="student_mothers_name_tr">Anne Adı:</string>
    <string name="student_nation_tr">Uyruğu:</string>
    <string name="lesson_condition_examination">Btn.</string>
    <string name="lesson_semester_mark">Dn.</string>
    <string name="taken_lessons_lesson_credit_tr">Kr.</string>
    <string name="preparatory_lesson_credit_tr">Kredisi</string>
    <string name="preparatory_lesson_mark">Notu</string>
    <string name="preparatory_tr">Dil Eğitimi Programı (Hazırlık)</string>
    <string name="exam_description_tr">Açıklama</string>
    <string name="exam_mark_tr">Notu</string>
    <string name="exam_average_mark_tr">Ortalama</string>
    <string name="semester_lessons_marks_empty">Ders notları açıklanmadı</string>
    <string name="semester_total_credit">Toplam Kr.</string>
    <string name="semester_total_credit_default">Toplam</string>
    <string name="semester_gpa">Ortalama</string>
    <string name="general_gpa_tr">Genel Ortalama</string>
    <string name="semester_lessons_title_tr">Bu Dönem Aldığınız Dersler</string>
    <string name="main_menu_item">Ana Menü</string>
    <string name="personal_info_item">Kişisel Bilgiler</string>
    <string name="taken_lessons_item">Aldığı Dersler</string>
    <string name="semester_marks_item">Dönemlik Notlar</string>
    <string name="transcript_menu_item">Transkript</string>
    <string name="logout">Çıkış Yap</string>
    <string name="logout_action_confirm">Uygulamayı kapatmak istediğinizden emin misiniz?</string>
    <string name="logout_action_positive_button_text">Evet</string>
    <string name="logout_action_negative_button_text">Hayır</string>
    <string name="lesson_gpa_tr">Ortalama:</string>
    <string name="total_credit_tr">Kredi:</string>
    <string name="total_average_tr">Ağırlıklı:</string>
    <string name="settings_title">Ayarlar</string>
    <string name="save_login_credentials_title">Numara ve Şifreyi Sakla</string>
    <string name="save_login_credentials_summary">Uygulamaya giriş yaparken</string>
    <string name="default_selected_menu_item_title">Varsayılan Seçilmiş Menü Öğesi</string>
    <string name="default_selected_menu_item_summary">Seçilmiş olan menu öğesi</string>
    <string name="default_selected_menu_item_dialog_title">Menu Ögeleri</string>
    <string name="student_taken_lessons_empty">Siz bu dönem ders almadınız</string>
    <string name="student_transcript_lessons_empty">Transkriptiniz henüz açıklanmadı</string>
    <string name="semester_lessons_marks_alert">Notlarınız gözükmüyorsa <a href="http://ogrnot.manas.kg/index.php?page=dersleri">Aldığı Dersler</a> menüsünden o dersin üzerine tıklayarak anket doldurmalısınız!</string>
    <string name="empty_credentials">Numara ve şifre boş olmamalı</string>
</resources>
