<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_menu_item"
            android:icon="@drawable/ic_home_black"
            android:title="@string/main_menu_item" />
        <item
            android:id="@+id/nav_personal_info_item"
            android:icon="@drawable/ic_person_black"
            android:title="@string/personal_info_item" />
        <item
            android:id="@+id/nav_taken_lessons_item"
            android:icon="@drawable/ic_book_black"
            android:title="@string/taken_lessons_item" />
        <item
            android:id="@+id/nav_semester_marks_item"
            android:icon="@drawable/ic_assignment_black"
            android:title="@string/semester_marks_item" />
        <item
            android:id="@+id/nav_transcript_item"
            android:icon="@drawable/ic_assessment_black"
            android:title="@string/transcript_menu_item" />
    </group>
</menu>
