<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/personal_info_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

    <RelativeLayout
        android:id="@+id/personal_info_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="10">

                <TextView
                    android:text="@string/student_number_tr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:textColor="#48484a"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/student_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#48484a"
                    android:paddingLeft="0dip"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="0dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="10">

                <TextView
                    android:text="@string/student_name_tr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:textColor="#48484a"
                    android:textStyle="normal"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="16sp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/student_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#48484a"
                    android:paddingLeft="0dip"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="10">

                <TextView
                    android:text="@string/student_surname_tr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:textColor="#48484a"
                    android:textStyle="normal"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="16sp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/student_surname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#48484a"
                    android:paddingLeft="0dip"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="10">

                <TextView
                    android:text="@string/student_birth_place_tr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:textColor="#48484a"
                    android:textStyle="normal"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="16sp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/student_birthplace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#48484a"
                    android:paddingLeft="0dip"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="10">

                <TextView
                    android:text="@string/student_birthday_tr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:textColor="#48484a"
                    android:textStyle="normal"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="16sp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/student_birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#48484a"
                    android:paddingLeft="0dip"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="10">

                <TextView
                    android:text="@string/student_fathers_name_tr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:textColor="#48484a"
                    android:textStyle="normal"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="16sp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/student_fathers_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#48484a"
                    android:paddingLeft="0dip"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="10">

                <TextView
                    android:text="@string/student_mothers_name_tr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:textColor="#48484a"
                    android:textStyle="normal"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="16sp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/student_mothers_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#48484a"
                    android:paddingLeft="0dip"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:weightSum="10">

                <TextView
                    android:text="@string/student_nation_tr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:textColor="#48484a"
                    android:textStyle="normal"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textSize="16sp"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/student_nationality"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="#48484a"
                    android:paddingLeft="0dip"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="0dp"/>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentTop="true"
            android:background="#ffffff"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <ImageView
                android:id="@+id/student_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"/>

            <ImageView
                android:src="@drawable/rounded_corners"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

    </RelativeLayout>
</RelativeLayout>